--- a/WD101/HTMLCSS/stylesheet.css
+++ b/WD101/HTMLCSS/stylesheet.css
@@ -4,6 +4,25 @@ div {
 	text-align: center;
 }
 
+.input_search {
+	width: 550px;
+	height: 18px;
+	margin-top: -40px;
+	margin-bottom: 10px;
+}
+
 .submit {
+	-webkit-appearance: none;
+	-moz-apperanace; none;
 	display: inline-block;
+	width: 110px;
+	height: 30px;
+	margin: 5px;
+	padding: 5px;
+	font-family: Arial, sans-serif;
+	font-weight: bold;
+	font: #222222;
+	background-color: #f5f5f5;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 2px;
 }
