--- a/WD101/HTMLCSS/stylesheet.css
+++ b/WD101/HTMLCSS/stylesheet.css
@@ -1,14 +1,15 @@
 div {
 	margin: auto;
-	width: 50%;
+	width: 100%;
 	text-align: center;
 }
 
 .input_search {
-	width: 550px;
-	height: 18px;
+	width: 575px;
+	height: 25px;
 	margin-top: -40px;
 	margin-bottom: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .submit {
@@ -23,6 +24,38 @@ div {
 	font-weight: bold;
 	font: #222222;
 	background-color: #f5f5f5;
-	border: 1px solid rgba(0, 0, 0, 0.1);
+	border: 2px solid rgba(0, 0, 0, 0.1);
 	border-radius: 2px;
+}
+
+.navbar {
+	position: relative;
+	right: -36em;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	display: inline;
+	position: relative;
+	padding: 5px;
+	margin: 5px;
+}
+
+a {
+	text-decoration: none;
+}
+
+.leftside {
+	position: relative;
+	left: -26em;
+}
+
+.rightside {
+	position: relative;
+	right: -26em;
 }
