--- a/WD101/HTMLCSS/stylesheet.css
+++ b/WD101/HTMLCSS/stylesheet.css
@@ -4,6 +4,10 @@ div {
 	text-align: center;
 }
 
+.image {
+	margin-top: 6em;
+}
+
 .input_search {
 	width: 575px;
 	height: 25px;
@@ -24,13 +28,18 @@ div {
 	font-weight: bold;
 	font: #222222;
 	background-color: #f5f5f5;
-	border: 2px solid rgba(0, 0, 0, 0.1);
+	border: 2px solid rgba(0, 0, 0, 0.05);
 	border-radius: 2px;
+}
+
+.submit:hover {
+	border: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 .navbar {
 	position: relative;
 	right: -36em;
+	height: 2em;
 }
 
 ul {
@@ -48,6 +57,22 @@ li {
 
 a {
 	text-decoration: none;
+	color: #222222;
+	font-family: Arial, sans-serif;
+	font-size: 10pt;
+	line-height: 35px;
+}
+
+a:hover {
+	text-decoration: underline;
+}
+
+.footer {
+	position: fixed;
+	bottom: 0;
+	height: 2em;
+	background-color: #f2f2f2;
+	border-top: 1px solid #e4e4e4;
 }
 
 .leftside {
