--- a/WD101/RailsBlog/app/views/articles/show.html.erb
+++ b/WD101/RailsBlog/app/views/articles/show.html.erb
@@ -2,3 +2,5 @@
 <p><%= @article.body %></p>
 <br>
 <%= link_to "<< Back to Articles List", articles_path %>
+<br>
+<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Delete the article?"} %>
