--- a/WD101/RailsBlog/app/views/articles/show.html.erb
+++ b/WD101/RailsBlog/app/views/articles/show.html.erb
@@ -3,4 +3,6 @@
 <br>
 <%= link_to "<< Back to Articles List", articles_path %>
 <br>
+<%= link_to "Edit", edit_article_path(@article) %>
+<br>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Delete the article?"} %>
