--- a/WD101/RailsBlog/app/views/articles/show.html.erb
+++ b/WD101/RailsBlog/app/views/articles/show.html.erb
@@ -1,8 +1,13 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 <br>
+<%= render partial: "comments/form" %>
+<br>
 <%= link_to "<< Back to Articles List", articles_path %>
 <br>
 <%= link_to "Edit", edit_article_path(@article) %>
 <br>
 <%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Delete the article?"} %>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: "articles/comment", collection: @article.comments %>
