--- a/WD101/RailsBlog/app/views/articles/_form.html.erb
+++ b/WD101/RailsBlog/app/views/articles/_form.html.erb
@@ -10,6 +10,11 @@
 		<%= f.text_field :title %>
 	</p>
 	<p>
+		<%= f.label :tag_list %>
+		<br>
+		<%= f.text_field :tag_list %>
+	</p>
+	<p>
 		<%= f.label :body %>
 		<br  />
 		<%= f.text_area :body %>
