added paperclip gem

--- a/WD101/RailsBlog/app/views/articles/show.html.erb
+++ b/WD101/RailsBlog/app/views/articles/show.html.erb
@@ -5,6 +5,13 @@
 		<%= link_to tag.name, tag_path(tag) %>
 	<% end %>
 </p>
+<br>
+<p>
+	<% if @article.image.exists? %>
+		<%= image_tag @article.image.url(:medium) %>
+	<% end %>
+</p>
+<br>
 <p><%= @article.body %></p>
 <br>
 <%= render partial: "comments/form" %>
