added authentication with sorcery gem

--- a/WD101/RailsBlog/app/views/articles/show.html.erb
+++ b/WD101/RailsBlog/app/views/articles/show.html.erb
@@ -18,9 +18,11 @@
 <br>
 <%= link_to "<< Back to Articles List", articles_path %>
 <br>
-<%= link_to "Edit", edit_article_path(@article) %>
-<br>
-<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Delete the article?"} %>
+<% if logged_in? %>
+	<%= link_to "Edit", edit_article_path(@article) %>
+	<br>
+	<%= link_to "Delete", article_path(@article), method: :delete, data: {confirm: "Delete the article?"} %>
+<% end %>
 
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: "articles/comment", collection: @article.comments %>
